Version 4.7.2 - 2016-05-??

* new setting xfer:timeout.
* ssl: improved ssl performance for small read sizes.
* http: new settings http:use-range and hftp:use-range.
* http: fixed setting http:authorization.
* torrent: discard cached data after validating.
* torrent: fixed a coredump on a file read error.
* torrent: fixed closing oldest cached FD.
* torrent/DHT: fixed our external IP voting.
* torrent/DHT: black-list nodes which change node_id often.
* torrent/DHT: black-list nodes which report many bad nodes.
* torrent/DHT: ignore nodes with our own ID.
* torrent/DHT: made node search more robust.
* torrent/DHT: mark new nodes as questionable.
* translations updated (zh_TW).

Version 4.7.1 - 2016-04-04

* http: fixed authentication for proxy, transient errors, max-retries=1.
* http: fixed put with authentication not to use HEAD request.
* translations updated (cs, ru).

Version 4.7.0 - 2016-03-28

* ftp: add MODE Z support.
* ftp: new settings ftp:use-mode-z, ftp:compressed-re, ftp:mode-z-level.
* ftp: add MFF support for chmod.
* ftp: prefer EPSV by default.
* ftp: prefer CWD-relative paths.
* ftp: enable MLSD by default (when supported).
* ftp: assume AUTH is supported based on other newer features.
* http: add support for digest authentication.
* http: fixed webdav directory listing.
* http: fixed a coredump when using a proxy for https.
* sftp: fixed mirror to sftp with xfer:use-temp-file set.
* ssl: optimized ssl for speed and lower syscall count.
* ssl: log server's certificate fingerprint.
* ssl: allow disabling certificate verification by its fingerprint.
* get: rename backup file back if new file cannot be retrieved.
* get: new settings xfer:backup-suffix and xfer:keep-backup.
* get/put/mget/mput/pget/get1: add -q (quiet) option.
* edit: allow creating a new file.
* new debug option -T (truncate output file).
* new mirror options: --{in,ex}clude-{rx,glob}-from.
* new mirror options: --Remove-source-dirs, --Move.

Version 4.6.5 - 2015-12-10
