@@ -2,6 +2,7 @@ Version 4.7.2 - 2016-05-??
 
 * new setting xfer:timeout.
 * ssl: improved ssl performance for small read sizes.
+* pget: allocate all needed disk space at once.
 * http: new settings http:use-range and hftp:use-range.
 * http: fixed setting http:authorization.
 * torrent: discard cached data after validating.
